update: added email verification
